<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Imam Finder</string>
    <string name="imam_contact">Imam – Mohammed Mohammed : (503) 935–9491</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="code">Enter code</string>
    <string name="verify">Send verification code</string>
    <string name="phone">Enter Phone Number</string>
    <string name="imam_name">Name: </string>
    <string name="imam_phone">Phone: </string>
    <string name="imam_photo">Photo</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="title_item_detail">Imam Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menkContent">Mufti Menk in Kerlala</string>
    <string name="upload">Welcome, upload Imam Image (Please select imam first)</string>
    <string name="contentDescription">Upload Imam Image</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="message">Message the imam</string>
    <string name="salam">Salemwalkom rahamtulhi wa baraktu, welcome</string>
    <string name="button">Button</string>
    <string name="verify_my_account">Verify</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="enter_message">Enter message</string>
    <string name="login">Login</string>
    <string name="tutorial">Tutorial point</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">Text</string>
    <string name="element_text">Hiring application</string>
    <string name="sign_in_with_google">Welcome, sign in with Google</string>
    <string name="cancel">Cancel</string>
    <string name="textview"> </string>
    <string name="enter_name">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="profile_picture">Profile photo</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_recycler_activity">Recycler activity</string>
    <string name="calling">calling...</string>
    <string name="image_call_hint">make call</string>
    <string name="make_call">Make call</string>
    <string name="title_new_word_activity">New word activity</string>
    <string name="title_imam_main_activity">Imam MainActivity</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full Name</string>
    <string name="imamfinder">ImamFinder</string>
    <string name="your_name">Your name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="default_notification_channel_id">Default Notification  Channel ID</string>
    <string name="msg_token_fmt">0</string>
    <string name="textview_left">TextView left</string>
    <string name="textview_right">Textview right</string>
    <string name="sheikh">Sheikh</string>
    <string name="photo_of_imam">Image of the imam</string>
    <string name="hiring">Hiring</string>
    <string name="server_client_id">AIzaSyD_9laAyRVEMzExT-gAeq4YZAOEb_aI9-w</string>
    <string name="type_a_message">Type a message</string>
    <string name="hello">Hello</string>
    <string name="send">Send</string>
    <string name="add_contact">Add contact</string>
    <string name="title_chat_activity">Chat activity</string>
    <string name="title_find_user_activity">Find user activity</string>
    <string name="user_message">User message</string>
    <string name="bot_message">Bot message</string>
    <string name="title_simple_chat_activity">Simple chat activity</string>
    <string name="home_activity">Home activity</string>
    <string-array name="imams">
        <item>Muhammad Khateeb</item>
        <item>Idris Alam</item>
        <item>Osama Alatssi</item>
        <item>Abdullah Muhammad</item>
    </string-array>

    <string-array name="description">
        <item>Imam</item>
        <item>Imam</item>
        <item>Lecturer</item>
        <item>Psychiatrist</item>
    </string-array>
</resources>